# fastapi

./: Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt  test.py
alembic/: env.py
alembic/versions/: 012b25a5c4f5_update_address_table.py  0fbac32f489f_update_posts_table.py  2a2e8e75d9e1_update_address_table.py  3216df59c7d8_update_posts_table.py  3f0bb18e5536_update_address_table.py  44d4c935efb1_update_posts_table.py  499454c23434_add_user_table.py  51152ee0cabe_update_address_table.py  556160a770af_update_posts_table.py  5add008c8438_add_address_table.py  664ea6851728_update_address_table.py  88bd75e46c59_add_address_table.py  8bb10109e931_update_address_table.py  b23d30fe4219_add_posts_table.py  c57805a707c9_update_posts_table.py  cbbef74e3230_update_posts_table.py  d1fda3021e5e_update_posts_table.py  d8b533059ff5_update_address_table.py  df923e2c89fb_update_posts_table.py  f011a1b9d9d2_add_relationship.py  f432c15bf25e_update_posts_table.py
config/: config.py  setting.py
crud/: __init__.py  base.py  base_class.py  crud_base.py  user.py
gql/: __init__.py  user.py
py/: address.py  posts.py  user.py
sq/: address.py  posts.py  user.py
src/: api.py  db.py
src/templates/: index.html
tests/: test_person.py
